# AgenticAICoach

./: .gcloudignore  .gitignore  CHALLENGE_README.md  CHANGELOG.md  Dockerfile  EMAIL_RESPONSE.md  LICENSE  PR_MESSAGE.md  README.md  app.py  app.yaml  index.html  openai_api.py  pyproject.toml  railway.json  requirements.txt  test.py  user.html  vercel.json
.devcontainer/: devcontainer.json
agentic_coaching_applications/pdf_search/: README.md  app.py
agentic_coaching_applications/template_application/: crew.py  main.py
ai_mvp_coach/: .gitignore  QUICKSTART.md  README.md  ai_mvp_coach.code-workspace  pyproject.toml  pyrightconfig.json  test_imports.py
ai_mvp_coach/src/ai_mvp_coach/: __init__.py  crew.py  main.py  simple_coach.py
ai_mvp_coach/src/ai_mvp_coach/agents/: __init__.py  mvp_coach.py
ai_mvp_coach/src/ai_mvp_coach/api/: __init__.py  chat_service.py  database.py  main.py
ai_mvp_coach/src/ai_mvp_coach/api/static/: style.css
ai_mvp_coach/src/ai_mvp_coach/api/templates/: chat.html  index.html
ai_mvp_coach/src/ai_mvp_coach/tasks/: __init__.py  coaching_tasks.py
api/: index.py
coach_branding/: README.md
coach_confidence/: requirements.txt
coach_confidence_action/: models.py
coach_confidence_analysis/: .gitignore  README.md  app.py
coach_confidence_analysis/tests/: test_main.py
coach_confidence_pattern/: docker-compose.yml
coach_confidence_pattern/frontend/: app.py
coach_cv_reviews/: Dockerfile  requirements.txt
coach_environmental_impact/: README.md
coach_feature_clarity/: .dockerignore  .gcloudignore  .gitignore  main.py
coach_growth_hacking/: .env.example
coach_learning/: .env.example
coach_matchmaking/: pyproject.toml
coach_matchmaking/src/ai_community_matchmaker/: main.py
coach_matchmaking/src/ai_community_matchmaker/config/: tasks.yaml
coach_matchmaking/src/ai_community_matchmaker/data/: target_user.json
coach_pitch/: Procfile  README.md  conversational_cli.py  requirements.txt  test_api_connection.py  test_basic.py  test_cli_simple.py  test_iteration.py  test_qa.py
coach_pitch/app/: main.py
coach_responsible_ai/: README.md
community_submissions/coach_branding/: pyproject.toml
community_submissions/coach_branding/src/ai_branding_coach/crews/messaging_crew/: messaging_crew.py
community_submissions/coach_branding/src/ai_branding_coach/crews/visual_crew/: visual_crew.py
community_submissions/coach_branding/src/ai_branding_coach/tools/: dynamic_input_tool.py
community_submissions/coach_confidence/: pyproject.toml
community_submissions/coach_confidence/src/coach_confidence/: main.py  models.py  orchestrator.py
community_submissions/coach_confidence/src/coach_confidence/agents/: reviewer.py
community_submissions/coach_environmental_ai/: pyproject.toml
community_submissions/coach_environmental_ai/src/environmental_ai_coach/: api.py  crew.py  gradio_ui.py
community_submissions/coach_environmental_ai/src/environmental_ai_coach/config/: agents.yaml  tasks.yaml
community_submissions/coach_environmental_ai/src/environmental_ai_coach/tools/: custom_tool.py
community_submissions/coach_environmental_ai/tests/: test_api.py  test_crew.py
community_submissions/coach_growth_hacking/: .gitignore  pyproject.toml
community_submissions/coach_growth_hacking/tests/: TESTING.md  run_tests.py  test_run_tests.py
community_submissions/confidence_coach_ai/confidence_template/: Procfile  README.md  crew.py  crew_app.py  crewapi.py  pyproject.toml  requirements.txt  setup.sh  wrapperscript.py
community_submissions/confidence_coach_ai/confidence_template/agents/: advice.py  transcriber.py
community_submissions/confidence_coach_ai/confidence_template/agents/test/: test_advice.py  test_corrector.py  test_rater.py  test_transcriber.py
community_submissions/confidence_coach_ai/confidence_template/training/: advice_examples.json  rater_examples.json
community_submissions/cv_review_ai/: .gitignore  Dockerfile  README.md  output.txt  pyproject.toml
community_submissions/cv_review_ai/src/cv_reviewer/: __init__.py  crew.py  main.py
community_submissions/cv_review_ai/src/cv_reviewer/app/: analyzer.py  api.py
community_submissions/cv_review_ai/src/cv_reviewer/app/static/: script.js
community_submissions/cv_review_ai/src/cv_reviewer/config/: agents.yaml  tasks.yaml
community_submissions/cv_review_ai/src/cv_reviewer/tools/: file_parser.py
community_submissions/cv_review_ai/test/: test_api.py  test_crew.py
community_submissions/cv_review_ai/test/data/: empty_cv.docx  sample_jd.txt
community_submissions/cv_review_ai/test/output/test_w_jd/: language.md  relevance.md  report.md
community_submissions/cv_review_ai/test/output/test_wo_jd/: language.md  power.md  report.md  structure.md
community_submissions/cv_reviewer/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
community_submissions/cv_reviewer/src/: api.py
community_submissions/cv_reviewer/src/cv_reviewer/: crew.py  main.py
community_submissions/cv_reviewer/src/cv_reviewer/config/: tasks.yaml
community_submissions/cv_reviewer/src/utils/: agent_helper.py  file_parser.py
community_submissions/cv_reviewer/tests/: test_crew.py  test_file_parser.py
community_submissions/sample_application_template/: README.md  pyproject.toml
community_submissions/sample_application_template/src/name_of_your_coach/: crew.py
community_submissions/sample_application_template/src/name_of_your_proposed_app/: main.py
community_submissions/sample_application_template/src/name_of_your_proposed_app/config/: tasks.yaml
confidence-coach-ai/: .dockerignore  .env.example  Dockerfile  index.html  openai_api.py
docs/: CONTRIBUTING.md  CV_REVIEWER.md  Confidence_Coach_README.md  DATABASE_IMPLEMENTATION.md  DATABASE_INTEGRATION_SUMMARY.md  DATABASE_QUICK_REFERENCE.md  PULL_REQUEST_TEMPLATE.md  coach_confidence.md
knowledgebase_learning_coach/: pyproject.toml
knowledgebase_learning_coach/src/learning_pdf_agent/config/: tasks.yaml
responsible_ai_coach/: pyproject.toml
responsible_ai_coach/src/ai_act_compliance_checker/config/: tasks.yaml
(+184 files in other folders)
