[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-mvp-coach"
version = "0.1.0"
description = "AI MVP Coach using CrewAI to guide entrepreneurs through MVP validation"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Sergius Justus", email = "sergiusnyah@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "python-dotenv",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "groq",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
