[project]
name = "ai_community_matchmaker"
version = "0.1.0"
description = "ai-community-matchmaker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.85.0,<1.0.0"
]

[project.scripts]
ai_community_matchmaker = "ai_community_matchmaker.main:run"
run_crew = "ai_community_matchmaker.main:run"
train = "ai_community_matchmaker.main:train"
replay = "ai_community_matchmaker.main:replay"
test = "ai_community_matchmaker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
