[project]
name = "ai_branding_coach"
version = "0.1.0"
description = "ai_branding_coach using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13.2"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "chainlit (>=2.6.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
]

[project.scripts]
kickoff = "ai_branding_coach.main:kickoff"
run_crew = "ai_branding_coach.main:kickoff"
plot = "ai_branding_coach.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
