[project]
name = "coach-confidence"
version = "0.1.0"
description = ""
authors = [
    {name = "Suryansh",email = "suryanshsinghshakya1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "crewai (>=0.118.0,<0.119.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "coach_confidence", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
