[tool.poetry]
name = "coach-confidence"
version = "0.1.0"
description = ""
authors = ["Suryansh <suryanshsinghshakya1@gmail.com>"]
readme = "README.md"
packages = [{include = "coach_confidence", from = "src"}]
python = ">=3.10,<3.13"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.115.12,<0.116.0"
crewai = ">=0.118.0,<0.119.0"
langchain-google-genai = ">=2.1.4,<3.0.0"
uvicorn = ">=0.34.2,<0.35.0"
pytest = ">=8.3.5,<9.0.0"

[tool.poetry.scripts]
start = "uvicorn src.coach_confidence.main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
