[tool.poetry]
name = "growth_hacking_coach"
version = "0.1.0"
description = "AI Growth Hacking & Viral Marketing Coach using CrewAI"
authors = ["Ansuman <ansuman00edu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }
crewai-tools = "^0.4.6"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.9"
streamlit = "^1.32.0"
requests = "^2.31.0"

[tool.poetry.scripts]
growth_hacking_coach = "growth_hacking_coach.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
