[project]
name = "confidence_coach_ai"
version = "0.1.0"
description = "Confidence Coach AI application"
authors = ["Zeyad ElSharkawy <ziadelsharkawy02@gmail.com>"]  # Corrected format
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
crewai = "*"
google-generativeai = "*"
python-dotenv = "*"
langchain = "*"
streamlit = "*"
requests = "*"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
fastapi-middleware-cors = "*"
google-cloud-speech = "*"
sqlite3 >= 3.35.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"